# AssemblyTron

./: .gitignore  20210913-dev-mk-counter.ipynb  Dilutions_script_ryan.ipynb  Downloads.ipynb  Example Workflow.Rmd  LICENSE.txt  README.md  ToDo  display_textfile_MK.ipynb  index.rst  j5_to_csvs.R  loading-feathers.ipynb  opentrons_demo_script.py  output_new_pcrwell_location.csv  paths.csv  robotpaths.csv  samplelastwell.csv  setup.cfg  setup.py  todaysdate.csv  todaysdate.ipynb
.ipynb_checkpoints/: Dilutions_script_ryan-checkpoint.ipynb
Cloning/: IVA.py  IVA_csvcreator_MK.ipynb  IVA_weong.py  Input.csv  Setup.py  Setup_seppcr_gradient.py  deletethisithink...IVA_separatepcr_gradient.py  oldIVA_separatepcrruns_gradient.py
DNA_AssemblyLine.egg-info/: PKG-INFO  SOURCES.txt
Examples/: Dilutions_script_ryan.ipynb  loading-feathers.ipynb
Gibson Assembly/: Gibson_Assembly.ipynb
Golden_Gate/: 20211014_setup_MK.ipynb  20211118_GoldenGate.py  G_oldenGate-oold.py  G_oldenGateols20220210.py  GoldenGate.py  GoldenGate_nodigests.py  GoldenGate_nodigests_separatepcrruns-gradient.py  GoldenGate_nodigests_separatepcrruns-gradient20220305.py  GoldenGate_nodigests_separatepcrruns-old.py  GoldenGate_nodigests_separatepcrruns.py  Golden_Gate_Instructions.ipynb  Golden_Gate_instructions.txt  Input.csv  New_setup.py  Setup_digests_gradient.py  Setup_nodigests.py  Setup_nodigests_seppcr.py  Setup_nodigests_seppcr_gradient.py  setup.py
J5_EricZirkle_GH3_mCherry/: .gitignore  j5_plasmids.csv  masteroligolist.csv  oligo.feather  partslist.csv  pcr.feather  pj5_00001.csv  pj5_00001_combinatorial_gibsoned_example.csv  pj5_00002.csv  pj5_00003.csv  pj5_00005.csv  pj5_00006.csv  pj5_00007.csv  pj5_00008.csv  targetpartsorder.csv
JAB/: new_ARF7.py  oligo.csv
R/: dilute_oligos.R  (+2 more)
(+1576 files in other folders)
