[metadata]
name = AssemblyLine
version = 0.0.1
author = John Bryant
author_email = jbryant2@vt.edu
description = A package for automating DNA assembly with an Opentrons liquid handling robot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PlantSynBioLab/opentrons
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License. To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-sa/4.0/ or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src