[metadata]
name = AssemblyTron
version = 0.0.6
author = John Bryant
author_email = jbryant2@vt.edu
description = A package for automating DNA assembly with an Opentrons liquid handling robot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PlantSynBioLab/opentrons
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = Apache License 2.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html